--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,43 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:POiG_Projekt"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="640" Width="1024">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="180"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        
+        <Grid Grid.Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="1*"/>
+            </Grid.RowDefinitions>
+            
+            <Image Grid.Row="0" Height="80" Width="160" Source="Resources/Logo.png" Stretch="Fill"/>
+            
+            <StackPanel Grid.Row="1" Margin="0 30 0 20">
+                <Button x:Name="ButtonHome" Content="Home" Grid.Row="1" Height="40"/>
+                <Button x:Name="ButtonMojeKursy" Content="Moje Kursy" Grid.Row="1" Height="40"/>
+                <Button x:Name="ButtonStudenci" Content="Studenci" Grid.Row="1" Height="40"/>
+                <Button x:Name="ButtonWykladowycy" Content="Wykładowcy" Grid.Row="1" Height="40"/>
+                <Button x:Name="ButtonPrzedmioty" Content="Przedmioty" Grid.Row="1" Height="40"/>
+                <Button x:Name="ButtonRanking" Content="RANKING" Grid.Row="1" Height="40" Margin="0 10 0 0"/>
+            </StackPanel>
 
+            <Button x:Name="ButtonWyloguj" Content="Wyloguj" Grid.Row="2" Height="40" Margin="0 0 0 60"/>
+        </Grid>
+
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="5*"/>
+            </Grid.RowDefinitions>
+
+            <Label x:Name="LabelTytul" Content="Home" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="30"/>
+
+            <Frame Grid.Row="1" Margin="30" Source="Home.xaml"/>
+        </Grid>
     </Grid>
 </Window>
