--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -19,7 +19,7 @@
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
             
-            <Image Grid.Row="0" Height="80" Width="160" Source="Resources/Logo.png" Stretch="Fill"/>
+            <Image Grid.Row="0" Height="80" Width="160" Source="../Resources/Logo.png" Stretch="Fill"/>
             
             <StackPanel Grid.Row="1" Margin="0 30 0 20">
                 <Button x:Name="ButtonHome" Content="Home" Grid.Row="1" Height="40"/>
