--- a/App.xaml
+++ b/App.xaml
@@ -2,8 +2,27 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:POiG_Projekt"
+             xmlns:view="clr-namespace:POiG_Projekt.View"
+             xmlns:viewModel="clr-namespace:POiG_Projekt.ViewModel"
              StartupUri="View/MainWindow.xaml">
     <Application.Resources>
-         
+        <DataTemplate DataType="{x:Type viewModel:CoursesViewModel}">
+            <view:Courses/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
+            <view:Home/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModel:ProfessorsViewModel}">
+            <view:Professors/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModel:RankingViewModel}">
+            <view:Ranking/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModel:StudentsViewModel}">
+            <view:Students/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModel:SubjectsViewModel}">
+            <view:Subjects/>
+        </DataTemplate>
     </Application.Resources>
 </Application>
