--- a/View/Ranking.xaml
+++ b/View/Ranking.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="POiG_Projekt.View.Home"
+﻿<Page x:Class="POiG_Projekt.View.Ranking"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,9 +6,9 @@
       xmlns:local="clr-namespace:POiG_Projekt.View"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Home">
+      Title="Ranking">
 
     <Grid>
-        <Label Content="HOME.XAML here" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="50"/>
+        
     </Grid>
 </Page>
