--- a/View/Courses.xaml
+++ b/View/Courses.xaml
@@ -6,9 +6,27 @@
       xmlns:local="clr-namespace:POiG_Projekt.View"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Courses">
+      Title="Courses"
+      Background="White">
 
     <Grid>
-        
+        <ListBox x:Name="ListBoxKursy" ItemsSource="{Binding}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Grid Margin="3">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Grid.Column="0" Text="Bindowany Przedmiot"/>
+                        <TextBlock Grid.Column="1" Text="Bindowana Grupa"/>
+                        <TextBlock Grid.Column="2" Text="Bindowany Semestr"/>
+                        <Button Grid.Column="3" Content="Zobacz" Margin="5"/>
+                    </Grid>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
     </Grid>
 </Page>
