--- a/View/Courses.xaml
+++ b/View/Courses.xaml
@@ -23,7 +23,7 @@
                         <TextBlock Grid.Column="0" Text="Bindowany Przedmiot"/>
                         <TextBlock Grid.Column="1" Text="Bindowana Grupa"/>
                         <TextBlock Grid.Column="2" Text="Bindowany Semestr"/>
-                        <Button Grid.Column="3" Content="Zobacz" Margin="5"/>
+                        <Button Grid.Column="3" Content="Zobacz" Style="{StaticResource BlueDetailsButton}"/>
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
