--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -41,7 +41,7 @@
                     <Button x:Name="ButtonRanking" Content="Ranking" Grid.Row="1" Command="{Binding NavigateCommand}" CommandParameter="{x:Static nav:ViewType.Ranking}" Style="{StaticResource MenuButton}"/>
             </StackPanel>
 
-            <Button x:Name="ButtonWyloguj" Content="Wyloguj" Grid.Row="2" Margin="0 0 0 60" Style="{StaticResource MenuButton}"/>
+            <Button x:Name="ButtonWyloguj" Content="Wyloguj" Grid.Row="2" Margin="0 0 0 60" Style="{StaticResource MenuButton}" Command="{Binding SignOut, Mode=OneWay}" CommandParameter="{Binding Mode=OneWay, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:MainWindow}}}"/>
         </Grid>
 
         <Grid Grid.Column="1">
