Change UI, Professors and Courses

--- a/View/Courses.xaml
+++ b/View/Courses.xaml
@@ -22,28 +22,35 @@
         </Grid.RowDefinitions>
         <Label x:Name="LabelTytul" Grid.Row="0" Content="Moje kursy" Style="{StaticResource Title}"/>
 
-        <ListView x:Name="ListBoxKursy" ItemsSource="{Binding Kursy}" Grid.Row="1">
+        <ListView x:Name="ListBoxKursy" ItemsSource="{Binding Kursy}" Grid.Row="1" Style="{StaticResource ListViewStyle}">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Width="311" Header="Przedmiot" DisplayMemberBinding="{Binding Przedmiot}"/>
-                    <GridViewColumn Width="180" Header="Grupa">
+                    <!--<GridViewColumn Width="311" Header="Przedmiot" DisplayMemberBinding="{Binding Przedmiot}" HeaderContainerStyle="{StaticResource ColumnHeader}"/>-->
+                    <GridViewColumn Width="360" Header="Przedmiot" HeaderContainerStyle="{StaticResource ColumnHeader}">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Grupa}" Margin="80 0 0 0"/>
+                                <TextBlock Text="{Binding Przedmiot}" Style="{StaticResource ListViewElement}"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Width="180" Header="Semestr">
+                    <GridViewColumn Width="180" Header="Grupa" HeaderContainerStyle="{StaticResource ColumnHeader}">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Semestr}" Margin="80 0 0 0"/>
+                                <TextBlock Text="{Binding Grupa}" Style="{StaticResource ListViewElement}"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Width="150" Header="Szczegóły">
+                    <GridViewColumn Width="180" Header="Semestr" HeaderContainerStyle="{StaticResource ColumnHeader}">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Content="Zobacz" Style="{StaticResource BlueDetailsButton}" Margin="30 0 0 0"/>
+                                <TextBlock Text="{Binding Semestr}" Style="{StaticResource ListViewElement}"/>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Width="150" Header="Szczegóły" HeaderContainerStyle="{StaticResource ColumnHeader}">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Content="Zobacz" Style="{StaticResource BlueDetailsButton}" Margin="0 10 0 0"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
