--- a/View/Home.xaml
+++ b/View/Home.xaml
@@ -11,28 +11,21 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="8*"/>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="3*"/>
         </Grid.RowDefinitions>
         <Label x:Name="LabelTytul" Grid.Row="0" Content="Home" Style="{StaticResource Title}"/>
-        <TextBlock Grid.Row="1" Text="Tu będzie binding jakiś albo nie wiem co, jakiś opis [buttony też do zmiany]" FontSize="16" Margin="20 0" Padding="20" Background="#F5F5F5"/>
+        <StackPanel Grid.Row="1" Margin="20" Orientation="Vertical" Width="800" Background="#f5f5f5">
+            <Label Content="Mistrz zdalnego nauczania" FontSize="20" FontWeight="Bold" Foreground="Black" Padding="20 10 20 5"/>
+            <TextBlock Text="Z przyjemnością informujemy, że nasi studenci wybrali Wydziałowego Mistrza Zdalnego Nauczania, którym został dr inż. Jarosław Karcewicz. Natomiast studenci z Wydziału Górnictwa, Inżynierii Bezpieczeństwa i Automatyki Przemysłowej wyróżnili w tym konkursie pracownika naszego Wydziału - dr inż. Konrada Kaczmarka. Serdecznie gratulujemy!"
+                           TextWrapping="Wrap" Padding="20 10 20 5" FontSize="16" />
+        </StackPanel>
 
-        <Grid Grid.Row="2" Margin="100 20 100 80">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <Button Grid.Column="0" Grid.Row="0" Content="Moje kursy" Style="{StaticResource BlueHomeButton}"/>
-            <Button Grid.Column="1" Grid.Row="0" Content="Studenci" Style="{StaticResource BlueHomeButton}"/>
-            <Button Grid.Column="1" Grid.Row="1" Content="Przedmioty" Style="{StaticResource BlueHomeButton}"/>
-            <Button Grid.Column="0" Grid.Row="1" Content="Wykładowcy" Style="{StaticResource BlueHomeButton}"/>
-            <Button Grid.Column="0" Grid.Row="2" Content="Ranking" Style="{StaticResource BlueHomeButton}"/>
-            <Button Grid.Column="1" Grid.Row="2" Content="Wyloguj" Style="{StaticResource BlueHomeButton}"/>
-        </Grid>
+        <StackPanel Grid.Row="2" Margin="20" Orientation="Vertical" Width="800" Background="#f5f5f5">
+            <Label Content="Zajęcia prowadzone zdalnie" FontSize="20" FontWeight="Bold" Foreground="Black" Padding="20 10 20 5"/>
+            <TextBlock Text="W związku z zapobieganiem rozprzestrzeniania się koronowirusa zostają zawieszone wykłady, ćwiczenia, laboratoria oraz konsultacje aż do odwołania. Część zajęć odbywać się będzie w trybie zdalnym (przez internet) od 16 marca. Lista przedmiotów i tryb pracy opisane są na stronie własnej Wydziału."
+                           TextWrapping="Wrap" Padding="20 10 20 5" FontSize="16" />
+        </StackPanel>
     </Grid>
 </Page>
