--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -40,8 +40,11 @@
                     <Button x:Name="ButtonPrzedmioty" Content="Przedmioty" Grid.Row="1" Command="{Binding NavigateCommand}" CommandParameter="{x:Static nav:ViewType.Subjects}" Style="{StaticResource MenuButton}"/>
                     <Button x:Name="ButtonRanking" Content="Ranking" Grid.Row="1" Command="{Binding NavigateCommand}" CommandParameter="{x:Static nav:ViewType.Ranking}" Style="{StaticResource MenuButton}"/>
             </StackPanel>
+            <Label x:Name="Zalogowanyjako" Content="Zalogowany jako" Grid.Row="2" Margin="0 0 0 60" Foreground="White" FontSize="14" Padding="40 0 0 0"/>
+            <TextBlock x:Name="Uzytkownik" Text="Jarosław Karcewicz" Grid.Row="2" Margin="0 20 0 60" Foreground="#409AEE" FontSize="14" Padding="40 0 0 0"/>
+            <Button x:Name="ButtonWyloguj" Content="Wyloguj" Grid.Row="2" Margin="0 6 0 60" Style="{StaticResource MenuButtonWyloguj}"/>
+            <TextBlock x:Name="Data" Text="7.07.2020" Grid.Row="2" Margin="0 100 0 0" Foreground="White" FontSize="16" Padding="40 0 0 0"/>
 
-            <Button x:Name="ButtonWyloguj" Content="Wyloguj" Grid.Row="2" Margin="0 0 0 60" Style="{StaticResource MenuButton}"/>
         </Grid>
 
         <Grid Grid.Column="1">
